--- a/webapp/pay_turkers.ipynb
+++ b/webapp/pay_turkers.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_results = pandas.read_csv('Batch_4255515_batch_results.csv').set_index(['HITId', 'WorkerId'])"
+    "batch_results = pandas.read_csv('Batch_5093535_batch_results.csv').set_index(['HITId', 'WorkerId'])"
    ]
   },
   {
@@ -35,7 +35,7 @@
     {
      "data": {
       "text/plain": [
-       "120"
+       "300"
       ]
      },
      "execution_count": 4,
@@ -49,23 +49,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "120 Batch_4255515_batch_results.csv\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!wc -l Batch_4255515_batch_results.csv"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -73,7 +56,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accepted-transcripts.json  reviews.json  surveys.json  transcripts.json\r\n"
+      "     300 Batch_5093535_batch_results.csv\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wc -l Batch_5093535_batch_results.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ls: transcripts: No such file or directory\r\n"
      ]
     }
    ],
@@ -5222,7 +5222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
